# internode-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  SKILL.md  docker-up.sh  install.sh  release.sh
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/client/: mod.rs
cli/src/commands/: auth.rs  context.rs  decisions.rs  entity.rs  intents.rs  mod.rs  projects.rs  search.rs  statuses.rs  subtopics.rs  tasks.rs  taxonomy.rs  teams.rs  topics.rs
cli/src/config/: mod.rs
cli/src/output/: mod.rs
