[package]
name = "internode-cli"
version = "0.2.0"
edition = "2021"
description = "Agent-native CLI for Internode Organizational Intelligence"
license = "MIT"

[[bin]]
name = "internode"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6"
toml = "0.8"
url = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
